# LynxDB

./: CMakeLists.txt
include/: client.h  main.h
src/: client.c  common.c  main.c
src/parser/: parser_standard.c  standard.l  standard.y
